5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1643_2704.log
== TEST (2019-04-08 19:22:04) 
-- CODE:
nota = float(input("valor da nota? "))
aluno_bonificado = input(" S ou N? ")
bonus = nota * 10 / 100
valor_final = nota + bonus
if (aluno_bonificado == S):
	print("valor_final")
else:
	print("nota")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (aluno_bonificado == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:22:36) 
-- CODE:
nota = float(input("valor da nota? "))
aluno_bonificado = input(" S ou N? ")
s = nota * 10 / 100
valor_final = nota + bonus
if (aluno_bonificado == S):
	print("valor_final")
else:
	print("nota")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_final = nota + bonus
NameError: name 'bonus' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:22:49) 
-- CODE:
nota = float(input("valor da nota? "))
aluno_bonificado = input(" S ou N? ")
s = nota * 10 / 100
valor_final = nota + s
if (aluno_bonificado == S):
	print("valor_final")
else:
	print("nota")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (aluno_bonificado == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:23:08) 
-- CODE:
nota = float(input("valor da nota? "))
aluno_bonificado = input(" S ou N? ")
s = nota * 10 / 100
valor_final = nota + s
if (aluno_bonificado = S):
	print("valor_final")
else:
	print("nota")
-- ERROR:
File "XXXX", line 5
    if (aluno_bonificado = S):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:23:15) 
-- CODE:
nota = float(input("valor da nota? "))
aluno_bonificado = input(" S ou N? ")
s = nota * 10 / 100
valor_final = nota + s
if (aluno_bonificado == S):
	print("valor_final")
else:
	print("nota")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (aluno_bonificado == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:26:27) 
-- CODE:
nota = float(input("valor da nota? "))
aluno_bonificado = input(" S ou N? ")
s = nota * 10 / 100
valor_final = nota + s
bonus = ("S")
if (aluno_bonificado == bonus):
	print("valor_final")
else:
	print("nota")
-- OUTPUT:
valor_final
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:26:27) 
-- CODE:
nota = float(input("valor da nota? "))
aluno_bonificado = input(" S ou N? ")
s = nota * 10 / 100
valor_final = nota + s
bonus = ("S")
if (aluno_bonificado == bonus):
	print("valor_final")
else:
	print("nota")
-- EXECUTION TIME:
0.120234
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
valor_final
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
valor_final
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
nota
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:26:28) 
-- CODE:
nota = float(input("valor da nota? "))
aluno_bonificado = input(" S ou N? ")
s = nota * 10 / 100
valor_final = nota + s
bonus = ("S")
if (aluno_bonificado == bonus):
	print("valor_final")
else:
	print("nota")
-- OUTPUT:
valor_final
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:26:38) 
-- CODE:
nota = float(input("valor da nota? "))
aluno_bonificado = input(" S ou N? ")
s = nota * 10 / 100
valor_final = nota + s
bonus = ("S")
if (aluno_bonificado == bonus):
	print("valor_final")
else:
	print("nota")
-- OUTPUT:
valor_final
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:26:38) 
-- CODE:
nota = float(input("valor da nota? "))
aluno_bonificado = input(" S ou N? ")
s = nota * 10 / 100
valor_final = nota + s
bonus = ("S")
if (aluno_bonificado == bonus):
	print("valor_final")
else:
	print("nota")
-- OUTPUT:
valor_final
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:26:38) 
-- CODE:
nota = float(input("valor da nota? "))
aluno_bonificado = input(" S ou N? ")
s = nota * 10 / 100
valor_final = nota + s
bonus = ("S")
if (aluno_bonificado == bonus):
	print("valor_final")
else:
	print("nota")
-- OUTPUT:
valor_final
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:26:39) 
-- CODE:
nota = float(input("valor da nota? "))
aluno_bonificado = input(" S ou N? ")
s = nota * 10 / 100
valor_final = nota + s
bonus = ("S")
if (aluno_bonificado == bonus):
	print("valor_final")
else:
	print("nota")
-- OUTPUT:
valor_final
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:26:39) 
-- CODE:
nota = float(input("valor da nota? "))
aluno_bonificado = input(" S ou N? ")
s = nota * 10 / 100
valor_final = nota + s
bonus = ("S")
if (aluno_bonificado == bonus):
	print("valor_final")
else:
	print("nota")
-- OUTPUT:
valor_final
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:26:53) 
-- CODE:
nota = float(input("valor da nota? "))
aluno_bonificado = input(" S ou N? ")
s = nota * 10 / 100
valor_final = nota + s
bonus = ("S")
if (aluno_bonificado == bonus):
	print("valor_final")
else:
	print("nota")
-- OUTPUT:
valor_final
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:27:23) 
-- CODE:
nota = float(input("valor da nota? "))
aluno_bonificado = input(" S ou N? ")
s = nota * 10 / 100
valor_final = nota + s
bonus = ("S")
if (aluno_bonificado == bonus):
	print(valor_final)
else:
	print(nota)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:27:33) 
-- CODE:
nota = float(input("valor da nota? "))
aluno_bonificado = input(" S ou N? ")
s = nota * 10 / 100
valor_final = nota + s
bonus = ("S")
if (aluno_bonificado == bonus):
	print(valor_final)
else:
	print(nota)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:27:41) 
-- CODE:
nota = float(input("valor da nota? "))
aluno_bonificado = input(" S ou N? ")
s = nota * 10 / 100
valor_final = nota + s
bonus = ("S")
if (aluno_bonificado == bonus):
	print(valor_final)
else:
	print(nota)
-- EXECUTION TIME:
0.181932
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
